# sensesp-p4-cockpit-wasm

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md
public/: index.html  jlp_wasm.js  jlp_wasm.wasm
src/: lv_conf.h  main.cpp  wasm_stubs.cpp
src/shim/freertos/: FreeRTOS.h  semphr.h
